--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-13  Sven Neumann  <sven@gimp.org>
+
+	* de.po: fixed wrong translation of format strings that caused bug
+	#142400.
+
 2004-05-12  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: Updated Russian translation
@@ -5,7 +10,7 @@
 
 2004-05-10  Marco Ciampa  <ciampix@libero.it>
 
-        * it.po: Updated italian translation.
+	* it.po: Updated italian translation.
 
 2004-04-27  Andras Timar  <timar@gnome.hu>
 
