--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2004-05-13  Michael Natterer  <mitch@gimp.org>
+
+	* app/menus/Makefile.am: added file-menu.[ch] and
+	file-dialog-menu.[ch]
+
+	* app/menus/menus.[ch]: removed menus_open_recent_add()...
+
+	* app/menus/file-menu.[ch]: ...and added it here as file_menu_setup().
+
+	* app/menus/image-menu.c
+	* app/menus/toolbox-menu.c: changed accordingly.
+
+	* app/menus/file-dialog-menu.[ch]: added factored out code from the
+	file-open and file-save menus as file_dialog_menu_setup().
+
+	* app/menus/file-open-menu.c
+	* app/menus/file-save-menu.c: call file_dialog_menu_setup().
+
 2004-05-12  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/documents-actions.c
