--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-13  Sven Neumann  <sven@gimp.org>
+
+	* libgimpthumb/gimpthumbnail.[ch]: added mime-type support.
+
 2004-05-13  Michael Natterer  <mitch@gimp.org>
 
 	* app/menus/Makefile.am: added file-menu.[ch] and
