2004-05-13  Sven Neumann  <sven@gimp.org>
	* libgimpthumb/tmpl/gimpthumbnail.sgml: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13256 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-13  Sven Neumann  <sven@gimp.org>
+
+	* libgimpthumb/tmpl/gimpthumbnail.sgml: regenerated.
+
 2004-05-12  Sven Neumann  <sven@gimp.org>
 
 	* app/Makefile.am: make it compile again.
