2004-05-13  Sven Neumann  <sven@gimp.org>
	* libgimpthumb/gimpthumbnail.c (gimp_thumbnail_save_thumb): oops.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13258 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-13  Sven Neumann  <sven@gimp.org>
+
+	* libgimpthumb/gimpthumbnail.c (gimp_thumbnail_save_thumb): oops.
+
 2004-05-13  Michael Natterer  <mitch@gimp.org>
 
 	Added GimpViewable infrastructure which enables migrating from
