2004-05-13  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimptoolview.[ch]: if in list mode, add an "eye"
	column which toggles tool visibility.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13260 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-13  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimptoolview.[ch]: if in list mode, add an "eye"
+	column which toggles tool visibility.
+
+2004-05-13  Michael Natterer  <mitch@gimp.org>
+
 	* app/actions/tools-actions.c (tools_actions_update): don't use
 	action_data_get_context() to update the "tools" action group
 	because it may return NULL. Use gimp_get_user_context() instead
