2004-05-13  Michael Natterer  <mitch@gimp.org>
	* app/core/gimpcontainer.c (gimp_container_add_handler): don't
	try to lookup detailed "notify::foo" signal specs.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13261 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-13  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimpcontainer.c (gimp_container_add_handler): don't
+	try to lookup detailed "notify::foo" signal specs.
+
+2004-05-13  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimptoolview.[ch]: if in list mode, add an "eye"
 	column which toggles tool visibility.
 
