--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-14  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: updated italian translation (incomplete)
+	
 2004-05-12  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: Updated Russian translation
