2004-05-14  Michael Natterer  <mitch@gimp.org>
	* app/actions/select-actions.c (select_actions_update): don't
	make "select-invert" insensitive if there is no selection.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13269 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-14  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/select-actions.c (select_actions_update): don't
+	make "select-invert" insensitive if there is no selection.
+
 2004-05-14  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/aa.c
