2004-05-14  Michael Natterer  <mitch@gimp.org>
	* app/pdb/fileops_cmds.c
	* libgimp/gimpfileops_pdb.c: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13270 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-14  Michael Natterer  <mitch@gimp.org>
 
+	* app/pdb/fileops_cmds.c
+	* libgimp/gimpfileops_pdb.c: regenerated.
+
+2004-05-14  Michael Natterer  <mitch@gimp.org>
+
 	* app/actions/select-actions.c (select_actions_update): don't
 	make "select-invert" insensitive if there is no selection.
 
